// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate a basic model 1`] = `
"import type { AddQuery, CountQuery, GetQuery, RemoveQuery, SetQuery } from "blade-compiler";
import type { ResultRecord } from "blade-syntax/queries";
interface ReducedFunction {
    /* @deprecated */
    apply: string;
    /* @deprecated */
    arguments: string;
    /* @deprecated */
    bind: string;
    /* @deprecated */
    call: string;
    /* @deprecated */
    caller: string;
    /* @deprecated */
    length: string;
    /* @deprecated */
    name: string;
    /* @deprecated */
    prototype: string;
    /* @deprecated */
    toString: string;
    /* @deprecated */
    unify: string;
}
export type Account = ResultRecord & {
    email: string;
    name: string;
};
export type Account = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
declare module "blade/types" {
    export type { Account, Accounts };
}
declare module "blade/server/hooks" {
    declare const use: {
        /* Get a single account record */
        account: ReducedFunction & {
            <T = Account>(options?: Partial<CombinedInstructions>): T | null;
            after: <T = Account>(value: CombinedInstructions["after"]) => T | null;
            before: <T = Account>(value: CombinedInstructions["before"]) => T | null;
            including: <T = Account>(value: CombinedInstructions["including"]) => T | null;
            limitedTo: <T = Account>(value: CombinedInstructions["limitedTo"]) => T | null;
            orderedBy: <T = Account>(value: CombinedInstructions["orderedBy"]) => T | null;
            selecting: <T = Account>(value: CombinedInstructions["selecting"]) => T | null;
            using: <T = Account>(value: CombinedInstructions["using"]) => T | null;
            with: {
                <T = Account>(options: CombinedInstructions["with"]): T | null;
                id: <T = Account>(value: ResultRecord["id"]) => T | null;
                "ronin.createdAt": <T = Account>(value: ResultRecord["ronin.createdAt"]) => T | null;
                "ronin.createdBy": <T = Account>(value: ResultRecord["ronin.createdBy"]) => T | null;
                "ronin.locked": <T = Account>(value: ResultRecord["ronin.locked"]) => T | null;
                "ronin.updatedAt": <T = Account>(value: ResultRecord["ronin.updatedAt"]) => T | null;
                "ronin.updatedBy": <T = Account>(value: ResultRecord["ronin.updatedBy"]) => T | null;
                name: <T = Account>(value: string) => T | null;
                email: <T = Account>(value: string) => T | null;
            };
        };
        /* Get multiple account records */
        accounts: ReducedFunction & {
            <T = Accounts>(options?: Partial<CombinedInstructions>): T | null;
            after: <T = Accounts>(value: CombinedInstructions["after"]) => T | null;
            before: <T = Accounts>(value: CombinedInstructions["before"]) => T | null;
            including: <T = Accounts>(value: CombinedInstructions["including"]) => T | null;
            limitedTo: <T = Accounts>(value: CombinedInstructions["limitedTo"]) => T | null;
            orderedBy: <T = Accounts>(value: CombinedInstructions["orderedBy"]) => T | null;
            selecting: <T = Accounts>(value: CombinedInstructions["selecting"]) => T | null;
            using: <T = Accounts>(value: CombinedInstructions["using"]) => T | null;
            with: {
                <T = Accounts>(options: CombinedInstructions["with"]): T | null;
                id: <T = Accounts>(value: ResultRecord["id"]) => T | null;
                "ronin.createdAt": <T = Accounts>(value: ResultRecord["ronin.createdAt"]) => T | null;
                "ronin.createdBy": <T = Accounts>(value: ResultRecord["ronin.createdBy"]) => T | null;
                "ronin.locked": <T = Accounts>(value: ResultRecord["ronin.locked"]) => T | null;
                "ronin.updatedAt": <T = Accounts>(value: ResultRecord["ronin.updatedAt"]) => T | null;
                "ronin.updatedBy": <T = Accounts>(value: ResultRecord["ronin.updatedBy"]) => T | null;
                name: <T = Accounts>(value: string) => T | null;
                email: <T = Accounts>(value: string) => T | null;
            };
        };
    };
}
"
`;

exports[`generate a basic model with blob field 1`] = `
"import type { AddQuery, CountQuery, GetQuery, RemoveQuery, SetQuery } from "blade-compiler";
import type { ResultRecord } from "blade-syntax/queries";
interface ReducedFunction {
    /* @deprecated */
    apply: string;
    /* @deprecated */
    arguments: string;
    /* @deprecated */
    bind: string;
    /* @deprecated */
    call: string;
    /* @deprecated */
    caller: string;
    /* @deprecated */
    length: string;
    /* @deprecated */
    name: string;
    /* @deprecated */
    prototype: string;
    /* @deprecated */
    toString: string;
    /* @deprecated */
    unify: string;
}
import type { StoredObject } from "blade-compiler";
export type Account = ResultRecord & {
    email: string;
    image: StoredObject;
    name: string;
};
export type Account = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
declare module "blade/types" {
    export type { Account, Accounts };
}
declare module "blade/server/hooks" {
    declare const use: {
        /* Get a single account record */
        account: ReducedFunction & {
            <T = Account>(options?: Partial<CombinedInstructions>): T | null;
            after: <T = Account>(value: CombinedInstructions["after"]) => T | null;
            before: <T = Account>(value: CombinedInstructions["before"]) => T | null;
            including: <T = Account>(value: CombinedInstructions["including"]) => T | null;
            limitedTo: <T = Account>(value: CombinedInstructions["limitedTo"]) => T | null;
            orderedBy: <T = Account>(value: CombinedInstructions["orderedBy"]) => T | null;
            selecting: <T = Account>(value: CombinedInstructions["selecting"]) => T | null;
            using: <T = Account>(value: CombinedInstructions["using"]) => T | null;
            with: {
                <T = Account>(options: CombinedInstructions["with"]): T | null;
                id: <T = Account>(value: ResultRecord["id"]) => T | null;
                "ronin.createdAt": <T = Account>(value: ResultRecord["ronin.createdAt"]) => T | null;
                "ronin.createdBy": <T = Account>(value: ResultRecord["ronin.createdBy"]) => T | null;
                "ronin.locked": <T = Account>(value: ResultRecord["ronin.locked"]) => T | null;
                "ronin.updatedAt": <T = Account>(value: ResultRecord["ronin.updatedAt"]) => T | null;
                "ronin.updatedBy": <T = Account>(value: ResultRecord["ronin.updatedBy"]) => T | null;
                name: <T = Account>(value: string) => T | null;
                email: <T = Account>(value: string) => T | null;
                image: <T = Account>(value: StoredObject) => T | null;
            };
        };
        /* Get multiple account records */
        accounts: ReducedFunction & {
            <T = Accounts>(options?: Partial<CombinedInstructions>): T | null;
            after: <T = Accounts>(value: CombinedInstructions["after"]) => T | null;
            before: <T = Accounts>(value: CombinedInstructions["before"]) => T | null;
            including: <T = Accounts>(value: CombinedInstructions["including"]) => T | null;
            limitedTo: <T = Accounts>(value: CombinedInstructions["limitedTo"]) => T | null;
            orderedBy: <T = Accounts>(value: CombinedInstructions["orderedBy"]) => T | null;
            selecting: <T = Accounts>(value: CombinedInstructions["selecting"]) => T | null;
            using: <T = Accounts>(value: CombinedInstructions["using"]) => T | null;
            with: {
                <T = Accounts>(options: CombinedInstructions["with"]): T | null;
                id: <T = Accounts>(value: ResultRecord["id"]) => T | null;
                "ronin.createdAt": <T = Accounts>(value: ResultRecord["ronin.createdAt"]) => T | null;
                "ronin.createdBy": <T = Accounts>(value: ResultRecord["ronin.createdBy"]) => T | null;
                "ronin.locked": <T = Accounts>(value: ResultRecord["ronin.locked"]) => T | null;
                "ronin.updatedAt": <T = Accounts>(value: ResultRecord["ronin.updatedAt"]) => T | null;
                "ronin.updatedBy": <T = Accounts>(value: ResultRecord["ronin.updatedBy"]) => T | null;
                name: <T = Accounts>(value: string) => T | null;
                email: <T = Accounts>(value: string) => T | null;
                image: <T = Accounts>(value: StoredObject) => T | null;
            };
        };
    };
}
"
`;

exports[`generate with no models 1`] = `
"import type { AddQuery, CountQuery, GetQuery, RemoveQuery, SetQuery } from "blade-compiler";
import type { ResultRecord } from "blade-syntax/queries";
interface ReducedFunction {
    /* @deprecated */
    apply: string;
    /* @deprecated */
    arguments: string;
    /* @deprecated */
    bind: string;
    /* @deprecated */
    call: string;
    /* @deprecated */
    caller: string;
    /* @deprecated */
    length: string;
    /* @deprecated */
    name: string;
    /* @deprecated */
    prototype: string;
    /* @deprecated */
    toString: string;
    /* @deprecated */
    unify: string;
}
declare module "blade/types" {
    export type {};
}
declare module "blade/server/hooks" {
    declare const use: {};
}
"
`;
